# CS2-Probability-Engine

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.prod.txt  requirements.txt
config/: dashboard_config.json  ensemble_config.json  scraper_mappings.json
docs/: dashboard.md  model_documentation.md  scoring_rules.md  scraper_configuration.md
models/: ensemble.py  openai_model.py  regression_model.py  scoring_rules.py
pipeline/: data_pipeline.py  excel_scraper.py  scraper_interface.py  stream_processor.py
templates/: dashboard.html
tests/: test_dashboard.py  test_excel_scraper.py  test_models.py  test_stream_processor.py
