[tool.poetry]
name = "cs2-probability-engine"
version = "0.1.0"
description = "CS2 PrizePicks Probability Engine with real-time data processing"
authors = ["Yanni vlachakis <yanphonehome@gmail.com>"]
readme = "README.md"
packages = [{include = "cs2_probability_engine"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
Flask-SocketIO = "^5.3.6"
Flask-Cors = "^4.0.0"
Flask-Caching = "^2.1.0"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.5"
Flask-Limiter = "^3.5.1"
gunicorn = "^21.2.0"
eventlet = "^0.35.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
redis = "^5.0.1"
SQLAlchemy = "^2.0.27"
sentry-sdk = "^1.40.4"
python-json-logger = "^2.0.7"
prometheus-client = "^0.19.0"
PyJWT = "^2.8.0"
cryptography = "^42.0.2"
requests = "^2.31.0"
aiohttp = "^3.9.3"
python-dateutil = "^2.8.2"
APScheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^24.1.1"
flake8 = "^7.0.0"
bandit = "^1.7.7"
mypy = "^1.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cs2_probability_engine --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 